# gr-dis

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
deploy/: README.md
deploy/logrotate/: gr-dis
deploy/systemd/: gr-dis-bridge.service  gr-dis-capture@.service
docker/: docker-compose.yml
docs/: configuration.md
examples/: config.example.yaml  config_grc.yaml  config_nbfm_146950.yaml  config_stress_8ch.yaml  config_wfm_and_file_capture.yaml
flowgraphs/: README.md  capture_dev.grc  capture_dev.py  tx_file_loopback.grc  tx_file_loopback.py
grc/: gr_dis_zmq_audio_sink.block.yml  gr_dis_zmq_tx_source.block.yml
scripts/: e2e-listener.py  golden-pdu-validate.py  run-wireshark-validate.sh  stress-multichannel.py  synth-nbfm-fixture.py  synth-nbfm-multichannel-fixture.py  synth-wfm-fixture.py  synthetic_tx.py  zmq_tx_probe.py
src/gr_dis/: cli.py  metrics.py
tests/integration/: _stress_publisher.py  _stress_reporting.py  _synthetic_publisher.py  test_bridge_synthetic.py  test_dis_listener_synthetic.py  test_stress_16ch.py  test_stress_32ch.py  test_stress_publisher_fsm.py  test_stress_publisher_zmq.py  test_stress_smoke.py
tests/unit/: test_capture_tx.py  test_chain_modulation_map.py  test_chain_wfm.py  test_chains_registry.py  test_config.py  test_dis_listener_unit.py  test_emission.py  test_encoder_ulaw.py  test_healthz.py  test_metrics_tx.py  test_pdu_header.py  test_pdu_parser.py  test_pdu_signal.py  test_pdu_transmitter.py  test_shutdown_pdus.py  test_tx_chains_registry.py  (+4 more)
(+27 files in other folders)
